2005-09-13  Yves Combe  <yves@ycombe.net>

	change background with level, to make level change visible.

	* src/boards/python/bargame.py:

2005-09-13  Yves Combe  <yves@ycombe.net>

	sqlite quote string in conf too.
	workaround tuxpaint lockfile bug.

	* po/Makefile.in.in:
	* src/boards/py-gcompris-properties.c: typo.
	(pyGcomprisPropertiesType_getattr):
	* src/boards/python/tuxpaint.py:
	* src/gcompris/gcompris_db.c: (gcompris_set_board_conf):

2005-09-12  Bruno coudoin  <bruno.coudoin@free.fr>

	Added Basque support (from dooteo <dooteo@euskalgnu.org>)

	* boards/flags/eu.png:
	* boards/flags/gcompris_flags.assetml.in:
	* boards/wordsgame/default-eu.xml:
	* boards/wordsgame/wordslevel1.eu:
	* boards/wordsgame/wordslevel2.eu:
	* boards/wordsgame/wordslevelmax.eu:
	* configure.in:
	* docs/Makefile.am:
	* docs/checkScreenshots.sh:
	* docs/eu/.cvsignore:
	* docs/eu/Makefile.am:
	* docs/eu/gcompris.texi:
	* docs/eu/overview.dia:
	* docs/eu/overview.jpg:
	* docs/eu/python.xml:
	* docs/gcompris2spip.pl:
	* po/Makefile.in.in:
	* src/gcompris/config.c:
	* src/gcompris/help.c: added name of the xml menu in the help (usefull to know
	                       what activity is being run)

2005-09-12  Yves Combe,,,  <yves@ycombe.net>

	refuse --reread-menu if db is read-only.
	quote boards strings before inserting in db with sqlite3_mprintf.
	
	* src/gcompris/gcompris.c: (gcompris_init):
	* src/gcompris/gcompris_db.c: (gcompris_db_board_update),
	(gcompris_db_get_board_id):

2005-09-11  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed comilation option --disable-sqlite.
	Should work as expected now.

	Changed all original message to use &gt; and &lt; in .xml.in files.
	Not using them bugs the libxml2 parsing.
	I added them around all http://... reference because translators tend to use
	the form <http://...>
	now hopefully they will respect this syntax.

	* boards/algebra_guesscount.xml.in:
	* boards/chronos.xml.in:
	* boards/clickgame.xml.in:
	* boards/connect4.xml.in: